# UAVMesh

./: .gitignore  .gitmodules  README.md  README.rst  create_sensor.sh  dji_setup.md  fmu_setup.md  pyproject.toml
devices/: 66-ftdi.rules  first_setup.sh  requirements.txt  roslaunch.service
docs/source/: conf.py  create_sensor.rst  index.rst  protocol.rst  usage.rst
scripts/: template_render.py
scripts/node_template/: package.xml  setup.cfg  setup.py
scripts/node_template/node_template/: node_template.py
src/anemometer/: nmea_usb_ros_proto.py  package.xml  setup.cfg  setup.py
src/anemometer/anemometer/: sonic_node.py
src/environ_msgs/: CMakeLists.txt  package.xml
src/environ_msgs/msg/: IMET.msg  NMEAMWV.msg  NMEAXDR.msg  NMEA_XDR.msg  Pth.msg  iMET_msg.msg
src/fake_gps/: package.xml  setup.cfg  setup.py
src/fake_gps/fake_gps/: gps.py
src/fake_radio/: package.xml  setup.cfg  setup.py
src/fake_radio/fake_radio/: radio.py
src/fake_sensor/: package.xml  setup.cfg  setup.py
src/fake_sensor/fake_sensor/: sensor.py
src/gps/: README.md  package.xml  setup.cfg  setup.py
src/gps/gps/: .gps.py.swp  dummy.py  gps.py  gpsreader.py  ubxfactoryreset.py  ubxstreamer.py
src/groundstation/: package.xml  setup.cfg  setup.py
src/groundstation/groundstation/: run.py
src/gsu/: README.md  package.xml  setup.cfg  setup.py
src/gsu/gsu/: run.py  tsdb.py
src/gsu/launch/: logger.launch.py  tsdb.launch.py
src/iMET/: iMET_ros2_proto.py  package.xml  setup.cfg  setup.py
src/iMET/iMET/: iMET_ros2_proto.py
src/networked_sensor/: package.xml  setup.cfg  setup.py
src/networked_sensor/networked_sensor/: .networked_sensor.py.swp  networked_sensor.py
src/plane/: README.md  package.xml  setup.cfg  setup.py
src/plane/config/: config.yaml
src/plane/launch/: main.launch.py  plane_stubbed.launch.py  stubbed.launch.py
src/plane/plane/: msg_logger.py  msg_transmitter.py
src/plane/test/: test_copyright.py
src/pth/: package.xml  setup.cfg  setup.py
src/pth/pth/: dummy.py  pth_timeref.py
src/pth/test/: test_flake8.py  test_pep257.py
src/serial_timeref/: README.md  package.xml  setup.cfg  setup.py
src/serial_timeref/serial_timeref/: serial_timeref.py
src/uldaq/: CMakeLists.txt  package.xml
src/uldaq/include/: buffer_pub.hpp
src/uldaq/launch/: uldaq.launch.py
src/uldaq/scripts/: uldaq_sensor_wrapper.py
src/uldaq/src/: buffer_pub.cpp
src/uldaq/src/uldaq/: CMakeLists.txt
src/uldaq_msgs/: CMakeLists.txt  package.xml
src/uldaq_msgs/msg/: Buffer.msg  Measurement.msg
src/xbee_interfaces/: CMakeLists.txt  package.xml
src/xbee_interfaces/msg/: Packet.msg
src/xbee_uav/: README.md  package.xml  setup.cfg  setup.py
src/xbee_uav/launch/: remote_device.launch.py
src/xbee_uav/xbee_uav/: radio.py
