<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>groundstation</name>
  <version>0.0.1</version>
  <description>Node that runs on the ground station node of the XBee network. This will be where the XBee messages get interpreted.</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>Apache 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <exec_depend>rclpy</exec_depends>
  <exec_depend>std_msgs</exec_depends>
  <exec_depend>xbee_interfaces</exec_depends>
</package>
